--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     </header>
 
     <main>
-        <section id="demo">
+        <section id="amazon">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center align-items-center">
-                        <h1>Amazon</h1>
-                        <input type="text" value="">
-                    </div>
                     <div class="col-md-12 text-center">
-                        <div class="btn">
-                            <h2>add</h2>
+                        <h1>Amazon</h1>
+                        <input type="text">
+                        <div class="btnbox">
+                            <div class="btn">
+                                <h2>add</h2>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-md-12">
                         <div class="box">
                             <h3 style="display: none"></h3>
                         </div>
