--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-12">
                         <div class="box">
-                            <h3 style="display: none"></h3>
+                            
                         </div>
                     </div>
                 </div>
